@@ -537,6 +537,32 @@ namespace aux {
 	int session_impl::logging_allocator::allocated_bytes = 0;
 #endif
 
+#ifdef TORRENT_USE_OPENSSL
+	// when running bittorrent over SSL, the SNI (server name indication)
+	// extension is used to know which torrent the incoming connection is
+	// trying to connect to. The 40 first bytes in the name is expected to
+	// be the hex encoded info-hash
+	int servername_callback(SSL *s, int *ad, void *arg)
+	{
+		session_impl* ses = (session_impl*)arg;
+		const char* servername = SSL_get_servername(s, TLSEXT_NAMETYPE_host_name);
+	
+		if (!servername || strlen(servername) < 40)
+			return SSL_TLSEXT_ERR_NOACK;
+
+		sha1_hash info_hash;
+		bool valid = from_hex(servername, 40, (char*)&info_hash[0]);
+
+		// the server name is not a valid hex-encoded info-hash
+		if (!valid)
+			return SSL_TLSEXT_ERR_NOACK;
+
+#error look up if there is an ssl torrent with this info-hash. If so, pick that torrent's ssl certificate for this connection and tie the peer to this torrent, somehow.
+
+		return SSL_TLSEXT_ERR_OK;
+	}
+#endif
+
 	session_impl::session_impl(
 		std::pair<int, int> listen_port_range
 		, fingerprint const& cl_fprint
@@ -646,6 +672,8 @@ namespace aux {
 		error_code ec;
 #ifdef TORRENT_USE_OPENSSL
 		m_ssl_ctx.set_verify_mode(asio::ssl::context::verify_none, ec);
+		SSL_CTX_set_tlsext_servername_callback(m_ssl_ctx.native_handle(), servername_callback);
+		SSL_CTX_set_tlsext_servername_arg(m_ssl_ctx.native_handle(), this);
 #endif
 
 #ifndef TORRENT_DISABLE_DHT
@@ -2067,7 +2095,7 @@ namespace aux {
 				m_listen_interface.port(s.sock->local_endpoint(ec).port());
 
 				m_listen_sockets.push_back(s);
-				async_accept(s.sock);
+				async_accept(s.sock, false);
 			}
 
 #if TORRENT_USE_IPV6
@@ -2080,7 +2108,7 @@ namespace aux {
 				if (s.sock)
 				{
 					m_listen_sockets.push_back(s);
-					async_accept(s.sock);
+					async_accept(s.sock, false);
 				}
 			}
 #endif // TORRENT_USE_IPV6
@@ -2109,13 +2137,33 @@ namespace aux {
 			if (s.sock)
 			{
 				m_listen_sockets.push_back(s);
-				async_accept(s.sock);
+				async_accept(s.sock, false);
 
 				if (m_listen_interface.address().is_v6())
 					m_ipv6_interface = m_listen_interface;
 				else
 					m_ipv4_interface = m_listen_interface;
 			}
+
+#ifdef TORRENT_USE_OPENSSL
+			if (m_settings.ssl_listen)
+			{
+				listen_socket_t s;
+				s.ssl = true;
+				setup_listener(&s, m_listen_interface, m_listen_port_retries, false, flags, ec);
+
+				if (s.sock)
+				{
+					m_listen_sockets.push_back(s);
+					async_accept(s.sock, s.ssl);
+
+					if (m_listen_interface.address().is_v6())
+						m_ipv6_interface = m_listen_interface;
+					else
+						m_ipv4_interface = m_listen_interface;
+				}
+			}
+#endif
 		}
 
 		m_udp_socket.bind(udp::endpoint(m_listen_interface.address(), m_listen_interface.port()), ec);
@@ -2298,21 +2346,40 @@ namespace aux {
 		}
 	}
 
-	void session_impl::async_accept(boost::shared_ptr<socket_acceptor> const& listener)
+	void session_impl::async_accept(boost::shared_ptr<socket_acceptor> const& listener, bool ssl)
 	{
 		TORRENT_ASSERT(!m_abort);
 		shared_ptr<socket_type> c(new socket_type(m_io_service));
-		c->instantiate<stream_socket>(m_io_service);
+		stream_socket* str = 0;
+
+#ifdef TORRENT_USE_OPENSSL
+		if (ssl)
+		{
+			// accept connections initializing the SSL connection to
+			// use the generic m_ssl_ctx context. However, since it has
+			// the servername callback set on it, we will switch away from
+			// this context into a specific torrent once we start handshaking
+			c->instantiate<ssl_stream<stream_socket> >(m_io_service, &m_ssl_ctx);
+			str = &c->get<ssl_stream<stream_socket> >()->next_layer();
+		}
+		else
+#endif
+		{
+			c->instantiate<stream_socket>(m_io_service);
+			str = c->get<stream_socket>();
+		}
+
+
 #if defined TORRENT_ASIO_DEBUGGING
 		add_outstanding_async("session_impl::on_accept_connection");
 #endif
-		listener->async_accept(*c->get<stream_socket>()
+		listener->async_accept(*str
 			, boost::bind(&session_impl::on_accept_connection, this, c
-			, boost::weak_ptr<socket_acceptor>(listener), _1));
+			, boost::weak_ptr<socket_acceptor>(listener), _1, ssl));
 	}
 
 	void session_impl::on_accept_connection(shared_ptr<socket_type> const& s
-		, weak_ptr<socket_acceptor> listen_socket, error_code const& e)
+		, weak_ptr<socket_acceptor> listen_socket, error_code const& e, bool ssl)
 	{
 #if defined TORRENT_ASIO_DEBUGGING
 		complete_async("session_impl::on_accept_connection");
@@ -2342,7 +2409,7 @@ namespace aux {
 			// non-fatal and we have to do another async_accept.
 			if (e.value() == ERROR_SEM_TIMEOUT)
 			{
-				async_accept(listener);
+				async_accept(listener, ssl);
 				return;
 			}
 #endif
@@ -2351,7 +2418,7 @@ namespace aux {
 			// non-fatal and we have to do another async_accept.
 			if (e.value() == EINVAL)
 			{
-				async_accept(listener);
+				async_accept(listener, ssl);
 				return;
 			}
 #endif
@@ -2377,16 +2444,54 @@ namespace aux {
 					m_settings.connections_limit = m_connections.size();
 				}
 				// try again, but still alert the user of the problem
-				async_accept(listener);
+				async_accept(listener, ssl);
 			}
 			if (m_alerts.should_post<listen_failed_alert>())
 				m_alerts.post_alert(listen_failed_alert(ep, e));
 			return;
 		}
-		async_accept(listener);
+		async_accept(listener, ssl);
+
+		if (ssl)
+		{
+			// for SSL connections, incoming_connection() is called
+			// after the handshake is done
+			s->get<ssl_stream<stream_socket> >()->async_accept_handshake(
+				boost::bind(&session_impl::ssl_handshake, this, _1, s));
+		}
+		else
+		{
+			incoming_connection(s);
+		}
+	}
+
+#ifdef TORRENT_USE_OPENSSL
+
+	void session_impl::ssl_handshake(error_code const& ec, boost::shared_ptr<socket_type> s)
+	{
+		error_code e;
+		tcp::endpoint endp = s->remote_endpoint(e);
+		if (e) return;
+
+#if defined(TORRENT_VERBOSE_LOGGING) || defined(TORRENT_LOGGING)
+		(*m_logger) << time_now_string() << " *** peer SSL handshake done [ ip: "
+			<< endp << " ec: " << ec.message() << "]\n";
+#endif
+
+		if (ec)
+		{
+			if (m_alerts.should_post<peer_error_alert>())
+			{
+				m_alerts.post_alert(peer_error_alert(torrent_handle(), endp
+					, peer_id(), ec));
+			}
+			return;
+		}
 
 		incoming_connection(s);
 	}
+
+#endif // TORRENT_USE_OPENSSL
 
 	void session_impl::incoming_connection(boost::shared_ptr<socket_type> const& s)
 	{
@@ -4699,7 +4804,7 @@ namespace aux {
 		return address();
 	}
 
-	unsigned short session_impl::listen_port() const
+	boost::uint16_t session_impl::listen_port() const
 	{
 		// if peer connections are set up to be received over a socks
 		// proxy, and it's the same one as we're using for the tracker
@@ -4715,6 +4820,30 @@ namespace aux {
 		if (m_listen_sockets.empty()) return 0;
 		return m_listen_sockets.front().external_port;
 	}
+
+#ifdef TORRENT_USE_OPENSSL
+	boost::uint16_t session_impl::ssl_listen_port() const
+	{
+		// if peer connections are set up to be received over a socks
+		// proxy, and it's the same one as we're using for the tracker
+		// just tell the tracker the socks5 port we're listening on
+		if (m_socks_listen_socket && m_socks_listen_socket->is_open()
+			&& m_proxy.hostname == m_proxy.hostname)
+			return m_socks_listen_port;
+
+		// if not, don't tell the tracker anything if we're in anonymous
+		// mode. We don't want to leak our listen port since it can
+		// potentially identify us if it is leaked elsewere
+		if (m_settings.anonymous_mode) return 0;
+		if (m_listen_sockets.empty()) return 0;
+		for (std::list<listen_socket_t>::const_iterator i = m_listen_sockets.begin()
+			, end(m_listen_sockets.end()); i != end; ++i)
+		{
+			if (i->ssl) return i->external_port;
+		}
+		return 0;
+	}
+#endif
 
 	void session_impl::announce_lsd(sha1_hash const& ih, int port, bool broadcast)
 	{
